--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -4,6 +4,11 @@ th
 table
   :margin 0
 
+#layout
+  :width 960px
+  :margin-left auto
+  :margin-right auto
+
 #header
   :background-color #DDDDDD
   
@@ -61,8 +66,9 @@ h2#page_title
   :margin 0
   :padding 10px
 
-#content
+#main
   :padding 20px
+  :width 100%
   
   #messages
     :border 1px solid #999999
@@ -112,52 +118,39 @@ h2#page_title
         :background-color #EEEEEE
 
   #games
-    :float right
-    :width 250px
-
     h3
       :font-size 13px
       :margin 0
       :padding 0
       :margin-bottom 5px
 
-    .game
-      :background-color #EEEEEE
-      :margin-bottom 2px
+  #new_game
+    h3
+      :margin 0
+      :margin-bottom 5px
 
-      .team_one
-        :float left
-        :width 100px
-        :text-align right
-        :font-size 11px
-        :padding-top 7px
+    label
+      :display block
+      :padding-bottom 5px
+
+      span
+        :display block
 
       .score
-        :float left
-        :width 50px
-        :font-weight bold
-        :text-align center
-        :padding-top 5px
+        :margin 0
+        :width 2em
 
-      .team_two
-        :float left
-        :width 100px
-        :font-size 11px
-        :padding-top 7px
+      select
+        :width 210px
+ 
+  .content_with_sidebar
+    :width = 960px - 250px - 20px
+    :float left
 
-      .meta
-        :width 250px
-        :text-align center
-        :font-size 11px
-        :color #999999
-        :padding-bottom 5px
+  #sidebar
+    :float right
+    :width 250px
 
-        .played_at
-          :display inline
-          
-        .creator
-          :display inline
-      
 #footer
   :padding 10px
   :background-color #EEEEEE
