--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -4,6 +4,11 @@ th {
 table {
   margin: 0; }
 
+#layout {
+  width: 960px;
+  margin-left: auto;
+  margin-right: auto; }
+
 #header {
   background-color: #DDDDDD; }
   #header h1 {
@@ -50,9 +55,10 @@ h2#page_title {
   margin: 0;
   padding: 10px; }
 
-#content {
-  padding: 20px; }
-  #content #messages {
+#main {
+  padding: 20px;
+  width: 100%; }
+  #main #messages {
     border: 1px solid #999999;
     background-color: #EEEEEE;
     padding: 10px;
@@ -63,65 +69,51 @@ h2#page_title {
     border: solid 1px #DD9A24;
     background-color: #FCC;
     border: solid 1px #C66; }
-  #content #game_count {
+  #main #game_count {
     padding-top: 20px;
     padding-left: 2px; }
-  #content label {
+  #main label {
     display: block; }
-    #content label input {
+    #main label input {
       display: block;
       margin-bottom: 10px; }
-  #content table.list {
+  #main table.list {
     width: 100%; }
-    #content table.list th {
+    #main table.list th {
       border: 0;
       border-bottom: 1px solid #000000;
       background-color: #DDDDDD;
       padding: 3px; }
-    #content table.list td {
+    #main table.list td {
       border: 0;
       padding: 3px;
       text-align: left; }
-    #content table.list tr.even td {
+    #main table.list tr.even td {
       background-color: #EEEEEE; }
-  #content #games {
+  #main #games h3 {
+    font-size: 13px;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 5px; }
+  #main #new_game h3 {
+    margin: 0;
+    margin-bottom: 5px; }
+  #main #new_game label {
+    display: block;
+    padding-bottom: 5px; }
+    #main #new_game label span {
+      display: block; }
+    #main #new_game label .score {
+      margin: 0;
+      width: 2em; }
+    #main #new_game label select {
+      width: 210px; }
+  #main .content_with_sidebar {
+    width: 690px;
+    float: left; }
+  #main #sidebar {
     float: right;
     width: 250px; }
-    #content #games h3 {
-      font-size: 13px;
-      margin: 0;
-      padding: 0;
-      margin-bottom: 5px; }
-    #content #games .game {
-      background-color: #EEEEEE;
-      margin-bottom: 2px; }
-      #content #games .game .team_one {
-        float: left;
-        width: 100px;
-        text-align: right;
-        font-size: 11px;
-        padding-top: 7px; }
-      #content #games .game .score {
-        float: left;
-        width: 50px;
-        font-weight: bold;
-        text-align: center;
-        padding-top: 5px; }
-      #content #games .game .team_two {
-        float: left;
-        width: 100px;
-        font-size: 11px;
-        padding-top: 7px; }
-      #content #games .game .meta {
-        width: 250px;
-        text-align: center;
-        font-size: 11px;
-        color: #999999;
-        padding-bottom: 5px; }
-        #content #games .game .meta .played_at {
-          display: inline; }
-        #content #games .game .meta .creator {
-          display: inline; }
 
 #footer {
   padding: 10px;
