git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@91 f5341608-8839-0410-823a-0bb850aa70eb

--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -100,7 +100,7 @@ h2#page_title
       :margin-bottom 10px
       
   table.list
-    :width 100%
+    :width = 960px - 40px
 
     th
       :border 0
