--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -78,7 +78,7 @@ h2#page_title {
       display: block;
       margin-bottom: 10px; }
   #main table.list {
-    width: 100%; }
+    width: 920px; }
     #main table.list th {
       border: 0;
       border-bottom: 1px solid #000000;
