git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@92 f5341608-8839-0410-823a-0bb850aa70eb

--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -147,6 +147,9 @@ h2#page_title
     :width = 960px - 250px - 20px
     :float left
 
+    table.list
+      :width = 960px - 20px - 250px
+
   #sidebar
     :float right
     :width 250px
