--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -124,6 +124,9 @@ h2#page_title
       :padding 0
       :margin-bottom 5px
 
+  .pagination
+    :padding-top 10px
+
   #new_game
     h3
       :margin 0
