--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -95,6 +95,8 @@ h2#page_title {
     margin: 0;
     padding: 0;
     margin-bottom: 5px; }
+  #main .pagination {
+    padding-top: 10px; }
   #main #new_game h3 {
     margin: 0;
     margin-bottom: 5px; }
