git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@95 f5341608-8839-0410-823a-0bb850aa70eb

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -98,6 +98,7 @@ h2#page_title {
   #main .pagination {
     padding-top: 10px; }
   #main #new_game h3 {
+    display: block;
     margin: 0;
     margin-bottom: 5px; }
   #main #new_game label {
