git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@96 f5341608-8839-0410-823a-0bb850aa70eb

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -62,8 +62,9 @@
           %hr
   
       #footer
-        Copyright 2007 by Lars Sehested
-        = '&middot;'
-        = link_to 'Project home'[], 'http://code.google.com/p/scorekeeper/', :target => '_blank'
-        = '&middot;'
-        = link_to 'Report issue'[], 'http://code.google.com/p/scorekeeper/issues/entry', :target => '_blank'
+        .content
+          Copyright 2007 by Lars Sehested
+          = '&middot;'
+          = link_to 'Project home'[], 'http://code.google.com/p/scorekeeper/', :target => '_blank'
+          = '&middot;'
+          = link_to 'Report issue'[], 'http://code.google.com/p/scorekeeper/issues/entry', :target => '_blank'
