--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -4,12 +4,10 @@ th
 table
   :margin 0
 
-#layout
+#header
   :width 960px
   :margin-left auto
   :margin-right auto
-
-#header
   :background-color #DDDDDD
   
   h1
@@ -67,8 +65,12 @@ h2#page_title
   :padding 10px
 
 #main
-  :padding 20px
-  :width 100%
+  :width 920px
+  :margin-left auto
+  :margin-right auto
+  :clear both
+  :padding-top 20px
+  :padding-bottom 20px
   
   #messages
     :border 1px solid #999999
@@ -148,22 +150,27 @@ h2#page_title
         :width 210px
  
   .content_with_sidebar
-    :width = 960px - 250px - 20px
+    :width = 960px - 220px - 40px
     :float left
 
     table.list
-      :width = 960px - 20px - 250px
+      :width = 960px - 60px - 220px
 
   #sidebar
     :float right
-    :width 250px
+    :width 220px
 
 #footer
-  :padding 10px
+  :width 960px
+  :margin-left auto
+  :margin-right auto
   :background-color #EEEEEE
   :border-top 1px solid #000000
   :text-align center
   :clear both
+
+  .content
+    :padding 10px
   
 input#openid_url
   :background white url(/images/openid.gif) no-repeat scroll 0pt 50%
