Using the new map.root-feature
git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@99 f5341608-8839-0410-823a-0bb850aa70eb

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -30,7 +30,7 @@
             = link_to_unless(language == 'en', 'English', :language => 'en')
             = link_to_unless(language == 'da', 'Dansk', :language => 'da')
     
-        %h1= link_to 'Score Keeper'[], home_url
+        %h1= link_to 'Score Keeper'[], root_url
         
         %ul#menu
           %li{:class => controller.controller_name == 'dashboard' ? 'current' : ''}= link_to 'Dashboard'[], dashboard_path
