--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -4,10 +4,7 @@ th
 table
   :margin 0
 
-#header
-  :width 960px
-  :margin-left auto
-  :margin-right auto
+#hd
   :background-color #DDDDDD
   
   h1
@@ -64,11 +61,7 @@ h2#page_title
   :margin 0
   :padding 10px
 
-#main
-  :width 920px
-  :margin-left auto
-  :margin-right auto
-  :clear both
+#bd
   :padding-top 20px
   :padding-bottom 20px
   
@@ -102,7 +95,7 @@ h2#page_title
       :margin-bottom 10px
       
   table.list
-    :width = 960px - 40px
+    :width 100%
 
     th
       :border 0
@@ -148,26 +141,15 @@ h2#page_title
 
       select
         :width 210px
- 
-  .content_with_sidebar
-    :width = 960px - 220px - 40px
-    :float left
-
-    table.list
-      :width = 960px - 60px - 220px
 
   #sidebar
     :float right
     :width 220px
 
-#footer
-  :width 960px
-  :margin-left auto
-  :margin-right auto
+#ft
   :background-color #EEEEEE
   :border-top 1px solid #000000
   :text-align center
-  :clear both
 
   .content
     :padding 10px
