--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,6 +11,7 @@
     %link{ :rel => 'stylesheet', :href => 'http://yui.yahooapis.com/2.3.1/build/reset-fonts-grids/reset-fonts-grids.css', :type => 'text/css' }
     %link{ :rel => 'stylesheet', :href => 'http://yui.yahooapis.com/2.3.1/build/base/base-min.css', :type => 'text/css' }
     = stylesheet_link_tag :all
+    = stylesheet_link_tag 'print', :media => 'print'
 
   %body
     #doc3{ :class => sidebar.blank? ? 'yui-t7' : 'yui-t5' }
