git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@119 f5341608-8839-0410-823a-0bb850aa70eb

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,7 +10,7 @@
         = @page_title
     %link{ :rel => 'stylesheet', :href => 'http://yui.yahooapis.com/2.3.1/build/reset-fonts-grids/reset-fonts-grids.css', :type => 'text/css' }
     %link{ :rel => 'stylesheet', :href => 'http://yui.yahooapis.com/2.3.1/build/base/base-min.css', :type => 'text/css' }
-    = stylesheet_link_tag :all
+    = stylesheet_link_tag 'screen'
     = stylesheet_link_tag 'print', :media => 'print'
 
   %body
