git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@120 f5341608-8839-0410-823a-0bb850aa70eb

--- a/app/views/games/index.haml
+++ b/app/views/games/index.haml
@@ -11,7 +11,7 @@
         %th= '&nbsp';
 
       - @games.each do |game|
-        %tr
+        %tr{ :class => cycle('odd', 'even') }
           %td
             - game.teams.first.memberships.each_with_index do |membership, index|
               = ' - ' if index == 1
