--- a/app/views/dashboard/index.haml
+++ b/app/views/dashboard/index.haml
@@ -15,7 +15,7 @@
       %th= '+/- ' + 'Average'[]
 
     - @people.each_with_index do |person, index|
-      %tr
+      %tr{ :class => cycle('odd', 'even') }
         %td= index + 1
         %td= person.full_name
         %td= person.ranking
