git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@125 f5341608-8839-0410-823a-0bb850aa70eb

--- a/app/views/games/index.haml
+++ b/app/views/games/index.haml
@@ -1,6 +1,10 @@
 - title 'Games'[]
 
 - if @games.length > 0
+  - if @filter
+    %p
+      = 'Filter by <b>{first}</b> and <b>{second}</b>'[:filter, @filter[0].display_name, @filter[1].display_name]
+
   #games
     %table.list
       %tr
