--- a/app/views/people/index.haml
+++ b/app/views/people/index.haml
@@ -7,7 +7,7 @@
     %th= 'Display name'[]
     %th= '&nbsp;'
   - @people.each do |person|
-    %tr[person]
+    %tr.person{ :class => cycle('odd', 'even') }
       %td= image_tag person.mugshot.public_filename(:thumb), :alt => person.full_name if person.mugshot
       %td= link_to_if admin?, person.full_name, edit_person_path(person)
       %td= person.display_name
