--- a/app/views/people/index.haml
+++ b/app/views/people/index.haml
@@ -11,7 +11,7 @@
       %td= image_tag person.mugshot.public_filename(:thumb), :alt => person.full_name if person.mugshot
       %td= link_to_if admin?, person.full_name, edit_person_path(person)
       %td= person.display_name
-      %td= link_to 'Remove'[], person_path(person), :method => :delete if admin?
+      %td= link_to 'Remove'[], person_path(person), :method => :delete, :confirm => 'Are you sure?' if admin?
 
 - if admin?
   - form_for @person, :html => { :multipart => true } do |f|
