git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@137 f5341608-8839-0410-823a-0bb850aa70eb

--- a/app/views/dashboard/index.haml
+++ b/app/views/dashboard/index.haml
@@ -27,6 +27,8 @@
         %td= person.difference
         %td= person.difference_average
 
-  #game_count
-    = 'Game count'[] + ':'
-    = @game_count
+- content_for :sidebar do
+  - cache(dashboard_path + '_sidebar') do
+    #game_count
+      = 'Games played'[] + ':'
+      = @game_count
