--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -25,14 +25,8 @@
             = link_to_unless(language == 'da', 'Dansk', :language => 'da')
     
         %h1= link_to 'Score Keeper'[], root_url
-        
-        %ul#menu
-          %li{:class => controller.controller_name == 'dashboard' ? 'current' : ''}= link_to 'Dashboard'[], dashboard_path
-          %li{:class => controller.controller_name == 'games' ? 'current' : ''}= link_to 'Games'[], games_path
-          %li{:class => controller.controller_name == 'teams' ? 'current' : ''}= link_to 'Teams'[], teams_path
-          %li{:class => controller.controller_name == 'people' ? 'current' : ''}= link_to 'People'[], people_path
-          - if admin?
-            %li{:class => controller.controller_name == 'users' ? 'current' : ''}= link_to 'Users'[], users_path
+
+        = render :partial => 'shared/menu'
     
       - unless @page_title.blank?
         %h2#page_title= @page_title
