git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@145 f5341608-8839-0410-823a-0bb850aa70eb

--- a/app/views/games/index.haml
+++ b/app/views/games/index.haml
@@ -52,13 +52,13 @@
 
         %label
           %span= 'Score'[]
-          = fi.text_field 'score1', :class => 'score'
+          = fi.text_field 'score1', :class => 'score', :autocomplete => 'off'
 
         %h3= 'vs'[]
 
         %label
           %span= 'Score'[]
-          = fi.text_field 'score2', :class => 'score'
+          = fi.text_field 'score2', :class => 'score', :autocomplete => 'off'
 
         %label
           %span= 'Attacker'[]
