Autodiscovery for Atom-feed for games
git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@146 f5341608-8839-0410-823a-0bb850aa70eb

--- a/app/views/games/index.haml
+++ b/app/views/games/index.haml
@@ -71,3 +71,6 @@
       = submit_tag 'Add'[], :disable_with => 'Adding'[] + '&hellip;'
   - else
     = 'Login to add a game.'[]
+
+- content_for :head do
+  = auto_discovery_link_tag :atom, formatted_games_url(:atom)
