--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,6 +13,7 @@
     = stylesheet_link_tag 'screen'
     = stylesheet_link_tag 'print', :media => 'print'
     = javascript_include_tag :defaults, :cache => true
+    = yield :head
 
   %body
     #doc3{ :class => sidebar.blank? ? 'yui-t7' : 'yui-t5' }
