git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@147 f5341608-8839-0410-823a-0bb850aa70eb

--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -118,6 +118,10 @@ h2#page_title
   .pagination
     :padding-top 10px
 
+  .game
+    label
+      :font-weight bold
+
   #new_game
     h3
       :display block
