git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@148 f5341608-8839-0410-823a-0bb850aa70eb

--- a/app/views/dashboard/index.haml
+++ b/app/views/dashboard/index.haml
@@ -6,12 +6,12 @@
       %th= '&nbsp;'
       %th= 'Person'[]
       %th= 'Ranking'[]
-      %th= 'Games won'[]
-      %th= 'Games played'[]
-      %th= 'Winning percentage'[]
-      %th= 'Goals for'[]
-      %th= 'Goals against'[]
-      %th= '+/-'
+      %th= 'Won'[]
+      %th= 'Played'[]
+      %th= 'Win %'[]
+      %th{ :title => 'Goals for'[] }= 'GF'[]
+      %th{ :title => 'Goals against'[] }= 'GA'[]
+      %th{ :title => 'Goals for - goals against'[] }= '+/-'
       %th= '+/- ' + 'Average'[]
 
     - @people.each_with_index do |person, index|
