--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -61,6 +61,10 @@ h2#page_title
   :margin 0
   :padding 10px
 
+h3
+  :margin 0
+  :padding 0
+
 #bd
   :padding-top 20px
   :padding-bottom 20px
@@ -141,6 +145,28 @@ h2#page_title
 
       select
         :width 220px
+
+  .columns
+    :clear both
+    :padding-top 20px
+
+    .left-column
+      :float left
+      :width 49%
+      :padding-right 1%
+
+    .right-column
+      :float left
+      :width 49%
+      :padding-left 1%
+
+  #recent_games
+    .members
+      :width 40%
+
+    .score
+      :width 20%
+      :text-align center
 
   #sidebar
     :width 220px
