--- a/app/views/games/index.haml
+++ b/app/views/games/index.haml
@@ -16,19 +16,7 @@
 
       - @games.each do |game|
         %tr{ :class => cycle('odd', 'even') }
-          %td
-            - game.teams.first.memberships.each_with_index do |membership, index|
-              = ' - ' if index == 1
-              %span{ :title => membership.points_awarded }
-                = membership.person.display_name
-
-          %td.score= game.teams.collect(&:score).join(' - ')
-
-          %td
-            - game.teams.last.memberships.each_with_index do |membership, index|
-              = ' - ' if index == 1
-              %span{ :title => membership.points_awarded }
-                = membership.person.display_name
+          = render :partial => 'game_columns', :locals => { :game => game }
 
           %td
             = game.played_at.to_s :short
