--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -50,6 +50,10 @@ h2#page_title {
   margin: 0;
   padding: 10px; }
 
+h3 {
+  margin: 0;
+  padding: 0; }
+
 #bd {
   padding-top: 20px;
   padding-bottom: 20px; }
@@ -105,6 +109,22 @@ h2#page_title {
       width: 2em; }
     #bd #new_game label select {
       width: 220px; }
+  #bd .columns {
+    clear: both;
+    padding-top: 20px; }
+    #bd .columns .left-column {
+      float: left;
+      width: 49%;
+      padding-right: 1%; }
+    #bd .columns .right-column {
+      float: left;
+      width: 49%;
+      padding-left: 1%; }
+  #bd #recent_games .members {
+    width: 40%; }
+  #bd #recent_games .score {
+    width: 20%;
+    text-align: center; }
   #bd #sidebar {
     width: 220px; }
 
