git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@153 f5341608-8839-0410-823a-0bb850aa70eb

--- a/app/views/dashboard/index.haml
+++ b/app/views/dashboard/index.haml
@@ -42,6 +42,10 @@
 
 - content_for :sidebar do
   - cache(dashboard_path + '_sidebar') do
-    #game_count
-      = 'Games played'[] + ':'
-      = @game_count
+    #counts
+      %p
+        %label= 'Games played'[] + ':'
+        = @game_count
+      %p
+        %label= 'Goals scored'[] + ':'
+        = @goals_scored
