git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@154 f5341608-8839-0410-823a-0bb850aa70eb

--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -171,6 +171,10 @@ h3
   #sidebar
     :width 220px
 
+    #counts
+      label
+        :font-weight bold
+
 #ft
   :background-color #EEEEEE
   :border-top 1px solid #000000
