git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@155 f5341608-8839-0410-823a-0bb850aa70eb

--- a/app/views/dashboard/index.haml
+++ b/app/views/dashboard/index.haml
@@ -28,6 +28,7 @@
         %td= person.goals_against
         %td= person.difference
         %td= person.difference_average
+    - reset_cycle
 
   .columns
     .left-column
