--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -68,7 +68,7 @@ h3
 #bd
   :padding-top 20px
   :padding-bottom 20px
-  
+
   #messages
     :border 1px solid #999999
     :background-color #EEEEEE
@@ -167,6 +167,11 @@ h3
     .score
       :width 20%
       :text-align center
+
+  .members
+    img.team
+      :position relative
+      :top 2px
 
   #sidebar
     :width 220px
