--- a/app/views/dashboard/_recent_games.haml
+++ b/app/views/dashboard/_recent_games.haml
@@ -5,5 +5,6 @@
     %th.name= 'Team two'[]
 
   - recent_games.each do |game|
-    %tr
+    %tr{ :class => cycle('odd', 'even') }
       = render :partial => 'games/game_columns', :locals => { :game => game }
+  - reset_cycle
