--- a/app/views/teams/index.haml
+++ b/app/views/teams/index.haml
@@ -11,7 +11,9 @@
 
     - @teams.each do |team|
       %tr{ :class => cycle('odd', 'even') }
-        %td= link_to team[:players].collect(&:full_name).join(' - '), games_path(:filter => team[:team_ids])
+        %td
+          = link_to image_tag('icons/group.png', :class => 'team', :alt => "Show this team's games"[]), games_path(:filter => team[:team_ids])
+          = team[:players].collect(&:full_name).join(' - ')
         %td= team[:total_ranking]
         %td= team[:games_won]
         %td= team[:games_played]
