--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -125,7 +125,7 @@ h3 {
   #bd #recent_games .score {
     width: 20%;
     text-align: center; }
-  #bd .members img.team {
+  #bd img.team {
     position: relative;
     top: 2px; }
   #bd #sidebar {
