--- a/app/views/games/_game_columns.haml
+++ b/app/views/games/_game_columns.haml
@@ -1,9 +1,9 @@
 %td.members
-  = link_to image_tag('icons/group.png', :class => 'team', :alt => "Show this team's games"[]), games_path(:filter => game.teams.first.team_ids)
+  = link_to image_tag('icons/sport_soccer.png', :class => 'team', :alt => "Show this team's games"[]), games_path(:filter => game.teams.first.team_ids)
   = render :partial => 'games/members', :locals => { :team => game.teams.first }
 
 %td.score= game.teams.collect(&:score).join(' - ')
 
 %td.members
-  = link_to image_tag('icons/group.png', :class => 'team', :alt => "Show this team's games"[]), games_path(:filter => game.teams.last.team_ids)
+  = link_to image_tag('icons/sport_soccer.png', :class => 'team', :alt => "Show this team's games"[]), games_path(:filter => game.teams.last.team_ids)
   = render :partial => 'games/members', :locals => { :team => game.teams.last }
