--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -168,6 +168,10 @@ h3
       :width 20%
       :text-align center
 
+  #games_per_day
+    .games_played
+      :text-align right
+
   img.team
     :position relative
     :top 2px
