git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@161 f5341608-8839-0410-823a-0bb850aa70eb

--- a/app/views/dashboard/index.haml
+++ b/app/views/dashboard/index.haml
@@ -45,6 +45,12 @@
 
 - content_for :sidebar do
   - cache(dashboard_path + '_sidebar') do
+    #leader
+      %p
+        %h3= 'Leader'[]
+        = image_tag @leader.mugshot.public_filename(:thumb), :alt => @leader.full_name if @leader.mugshot
+        = @leader.full_name
+
     #counts
       %p
         %label= 'Games played'[] + ':'
