--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -179,6 +179,10 @@ h3
   #sidebar
     :width 220px
 
+    #leader
+      :padding-bottom 20px
+      :text-align center
+
     #counts
       label
         :font-weight bold
