git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@162 f5341608-8839-0410-823a-0bb850aa70eb

--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -183,6 +183,9 @@ h3
       :padding-bottom 20px
       :text-align center
 
+      img
+        :display block
+
     #counts
       label
         :font-weight bold
