git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@163 f5341608-8839-0410-823a-0bb850aa70eb

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -135,6 +135,8 @@ h3 {
     #bd #sidebar #leader {
       padding-bottom: 20px;
       text-align: center; }
+      #bd #sidebar #leader img {
+        display: block; }
     #bd #sidebar #counts label {
       font-weight: bold; }
 
