git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@164 f5341608-8839-0410-823a-0bb850aa70eb

--- a/app/views/dashboard/index.haml
+++ b/app/views/dashboard/index.haml
@@ -48,7 +48,7 @@
     #leader
       %p
         %h3= 'Leader'[]
-        = image_tag @leader.mugshot.public_filename(:thumb), :alt => @leader.full_name if @leader.mugshot
+        .mugshot= image_tag @leader.mugshot.public_filename(:thumb), :alt => @leader.full_name if @leader.mugshot
         = @leader.full_name
 
     #counts
